# trust-battle-gaming-solana

./: Anchor.toml  README.md  package.json
programs/trust-battle-Gaming/: Cargo.toml
programs/trust-battle-Gaming/src/: lib.rs
programs/trust-battle-Gaming/src/instructions/: init.rs
programs/trust-battle-Gaming/src/instructions/rps_basic/: complete_rps_basic.rs  init_rps_basic.rs  register_player_rps_basic.rs
programs/trust-battle-Gaming/src/state/: player.rs
programs/trust-battle-Gaming/src/state/rps_basic_state/: mod.rs  rps_basic_player.rs
programs/zk-games-solana/: Cargo.toml
programs/zk-games-solana/src/: errors.rs  lib.rs
programs/zk-games-solana/src/instructions/: init.rs  mod.rs  register_game_client.rs  register_game_type.rs  register_player.rs
programs/zk-games-solana/src/instructions/rps_basic/: cancel_rps_basic.rs  complete_rps_basic.rs  init_rps_basic.rs  join_rps_basic.rs  mod.rs  register_player_rps_basic.rs
programs/zk-games-solana/src/state/: game_client.rs  game_type.rs  manager.rs  mod.rs  rps_basic_game.rs
programs/zk-games-solana/src/state/rps_basic_state/: mod.rs  rps_basic_game.rs  rps_basic_player.rs
tests/: trust-battle-gaming-solana.ts  zk-games-solana.ts
