[package]
name        = "zk-games-solana"
version     = "0.1.0"
description = "Created with Anchor"
edition     = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "zk_games_solana"

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang    = { version = "=0.31.0", features = ["init-if-needed"] }
anchor-spl     = "=0.31.0"
sp1-solana     = { git = "https://github.com/succinctlabs/sp1-solana" }
zk-games-types = { git = "https://github.com/Art3miX/zkgames-rps", package = "zk-games-types" }
bytemuck       = { version = "1.20.0", features = ["min_const_generics"] }
